# db

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/2019-11-08-145219_create_spells/: down.sql  up.sql
migrations/2019-11-13-060310_create_schools/: down.sql  up.sql
migrations/2019-11-13-061705_add_schools_to_spells/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
src/json/: transform.py  types.rs  utils.rs
src/models/: mod.rs  schools.rs  spell.rs  spell_schools.rs  spell_schools_pretty_ger.rs
