[package]
name = "splitterrust_db"
version = "0.1.0"
authors = ["Maximilian Konter <biskit1943@gmx.de>"]
edition = "2018"
repository = "https://github.com/splitterrust/db"
license-file = "LICENSE"
description = """
The database implementation for splitterrust, a collections of utilities
written in rust for the splittermond P&P.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0", features = ["postgres"] }
dotenv = "0.15"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
